# AgentFace

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml
docker/: Dockerfile.app  docker-compose.yml
model_services/beautify_service/: Dockerfile  main.py
model_services/multimodal_service/: Dockerfile  main.py
scripts/: run_dev.sh
src/agent_face/: config.py  main.py
src/agent_face/api/: dependencies.py  middleware.py  router.py  schemas.py
src/agent_face/bridge/: maf_client.py  types.py
src/agent_face/langgraph_brain/: graph.py  routing.py  state.py
src/agent_face/langgraph_brain/memory/: feedback.py  history.py  preferences.py
src/agent_face/langgraph_brain/nodes/: analyze_image.py  apply_beautification.py  collect_feedback.py  finalize.py  handle_error.py  present_plan.py  receive_input.py  retrieve_context.py  update_memory.py
src/agent_face/maf_body/: orchestrator.py
src/agent_face/maf_body/agent_cards/: orchestrator.yaml
src/agent_face/maf_body/agents/: beautification_agent.py  multimodal_agent.py  safety_guard_agent.py
src/agent_face/maf_body/middleware/: pipeline.py
src/agent_face/maf_body/tools/: beautify_tool.py  multimodal_tool.py
src/agent_face/models/: beautify_client.py  multimodal_client.py
src/agent_face/shared/: image_utils.py  observability.py
src/agent_face/static/: demo.html  index.html
tests/: conftest.py
tests/test_api/: test_sessions.py
tests/test_langgraph/: test_state_machine.py
tests/test_maf/: test_orchestrator.py
